--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "PrototypeBuildKit",
   "version": "1.1.0",
-  "description": "RP3's Prototype Build Kit, your starting point for builds of all kinds.",
+  "description": "White Labeled Prototype Build Kit, your starting point for builds of all kinds.",
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.17.5",
@@ -26,6 +26,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "RP3 Agency",
+  "author": "Kurt Roberts",
   "license": "MIT"
 }
